tunneling-outbound-traffic/samples/https-proxy/gateway-tls-passthrough/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: external-app-via-egress-gateway
spec:
  hosts:
  - external-app.corp.net
  gateways:
  - istio-egressgateway
  - mesh
# TODO:
#  tcp:
#  - match:
#    - gateways:
#      - mesh
#      port: 80
#    route:
#    - destination:
#        host: istio-egressgateway.istio-system.svc.cluster.local
#        port:
#          number: 80
#  - match:
#    - gateways:
#      - istio-egressgateway
#      port: 80
#    route:
#    - destination:
#        host: external-forward-proxy.corp.net
#        port:
#          number: 3443
  tls:
  - match:
    - gateways:
      - mesh
      port: 443
      sniHosts:
      - external-app.corp.net
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        port:
          number: 443
  - match:
    - gateways:
      - istio-egressgateway
      port: 443
      sniHosts:
      - external-app.corp.net
    route:
    - destination:
        host: external-forward-proxy.corp.net
        port:
          number: 3443
